...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QR6-VP-icZ">
                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                <items>
                                    <navigationItem title="Account" id="qYJ-gQ-JhZ">
                                        <barButtonItem key="rightBarButtonItem" title="Sign out" id="XTB-6d-JLS">
                                            <connections>
                                                <segue destination="BRZ-Kh-Hwi" kind="unwind" unwindAction="prepareForUnwindWithSegue:" id="7Cd-GA-3ay"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
...
