...
    static let wrongColor: UIColor = #colorLiteral(red: 0.4392156899, green: 0.01176470611, blue: 0.1921568662, alpha: 1)

    static let fillAllFieldsError = "Please fill all fields"
    static let creatingUserError = "An unknown error occurred. Please try again"

    static let registerButtonText = "SIGN UP"
    static let signInButtonText = "SIGN IN"
    static let testBeginButtonText = "Begin!"
    static let testStopButtonText = "Stop"
    static let testContinueButtonText = "Continue"
    static let testPrevButtonText = "← PREVIOUS"
    static let testNextButtonText = "NEXT →"
    static let testNoAnswerOption = "No Answer"
...
